--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
-[[build]]
+[build]
   publish = "."
   command = "echo 'Static site - no build needed'"
 
 [[redirects]]
   from = "/api/*"
-  to = "https://your-railway-backend.up.railway.app/api/:splat"
+  to = "https://best-last-portfolio.onrender.com/api/:splat"
   status = 200
   force = true
 
